# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./appointments";
 export * from "./barbers";
 export * from "./services";
 export * from "./blocked-slots";
+export * from "./settings";
